# rustbar

./: Cargo.toml  LICENSE  README.md
src/: .rustbars.rs.swp  lib.rs  rustbars.rs  term_utils.rs
