[package]
name = "rustbar"
version = "0.2.0"
authors = ["Maciej Dziardziel <fiedzia@gmail.com>"]
description = "Set of progressbars for rust"
keywords = ["progressbar"]
license = "MIT"
repository = "https://github.com/Fiedzia/rustbar"
homepage = "https://github.com/Fiedzia/rustbar"
exclude = ["gif/*"]
